@@ -59,7 +59,7 @@
 		<setting id="provider.animetosho" type="bool" label="Anime Tosho" default="true" />
 
 		<!-- English Embeds -->
-		<setting type="lsep" label="40223" />
+		<setting type="lsep" label="40504" />
 		<setting type="sep"/>
 		<setting id="provider.animix" type="bool" label="Animix" default="true" />
 		<setting id="provider.animepahe" type="bool" label="Animepahe" default="true" />
@@ -70,10 +70,9 @@
 		<setting id="provider.zoro" type="bool" label="Zoro" default="true" />
 
 		<!-- Portugese Embeds -->
-		<setting type="lsep" label="40251" />
+		<setting type="lsep" label="40505" />
 		<setting type="sep"/>
 		<setting id="provider.animess" type="bool" label="Otaku Animes" default="true" />
-
 	</category>
 
 	<!-- Playback -->
